--- a/.env
+++ b/.env
@@ -19,12 +19,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-# DB_CONNECTION=sqlite  
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql  
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel_notes
+DB_USERNAME=user_laravel_notes
+DB_PASSWORD=g8M6HIpuDIDAMoJEFoYIFu3ISuMoYu
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
